--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,10 @@ mybatis:
 
 spring:
   datasource:
-    password: cinscinsb511
+    password: 123
     username: root
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://182.150.37.58:3306/university_event_analyse?useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://localhost:3306/baidu_event?useUnicode=true&characterEncoding=utf8&useSSL=false
 server:
   port: 4000
 
