增加登录模块

--- a/build.gradle
+++ b/build.gradle
@@ -42,5 +42,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('mysql:mysql-connector-java')
 	compile('org.projectlombok:lombok')
+	compile('io.jsonwebtoken:jjwt:0.6.0')
+	compile ('org.springframework.boot:spring-boot-starter-security')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
