--- a/build.gradle
+++ b/build.gradle
@@ -45,4 +45,5 @@ dependencies {
 	compile('io.jsonwebtoken:jjwt:0.6.0')
 	compile ('org.springframework.boot:spring-boot-starter-security')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
 }
