--- a/build.gradle
+++ b/build.gradle
@@ -46,4 +46,6 @@ dependencies {
 	compile ('org.springframework.boot:spring-boot-starter-security')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+	compile group: 'org.jfree', name: 'jfreechart', version: '1.0.19'
+	compile ('org.springframework.boot:spring-boot-starter-freemarker:1.5.4.RELEASE')
 }
