--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 	compile('org.projectlombok:lombok')
 	compile('io.jsonwebtoken:jjwt:0.6.0')
 	compile ('org.springframework.boot:spring-boot-starter-security')
-//	compile group: 'com.alibaba', name: 'fastjson', version: '1.2.35'
+	compile group: 'com.alibaba', name: 'fastjson', version: '1.2.35'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
 	compile group: 'org.jfree', name: 'jfreechart', version: '1.0.19'
