--- a/build.gradle
+++ b/build.gradle
@@ -49,4 +49,5 @@ dependencies {
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
 	compile group: 'org.jfree', name: 'jfreechart', version: '1.0.19'
 	compile ('org.springframework.boot:spring-boot-starter-freemarker:1.5.4.RELEASE')
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '1.5.6.RELEASE'
 }
